<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_BCD_Cfg" Id="{28c0e928-f1d0-422d-b076-20c83bf416b1}">
    <Declaration><![CDATA[TYPE T_BCD_Cfg :
STRUCT
	bolSimulation: BOOL;
	strSensorIPAdr: STRING(15) := '';
	udiSensorPort: UDINT := 0;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>