<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_BCD_Data" Id="{37d1b829-f095-4cdf-8cfc-13126a15fee0}">
    <Declaration><![CDATA[TYPE T_BCD_Data :
STRUCT
	bolCodeReaded: BOOL;
	uliBarCode: ULINT;
	strBarCode: STRING;
	stDevInfo: T_BCD_DeviceInfo;
	stServInfo: T_BCD_ServiceInfo;
	stOpData: T_BCD_OperatingData;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>