<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_BCD_Error" Id="{65b8962c-b37e-4a90-add1-8144aebacebf}">
    <Declaration><![CDATA[TYPE T_BCD_Error :
STRUCT
	/// Reset failure
	bolErrAck: BOOL;
	/// atleast one failure active
	bolErrorActive: BOOL;
	/// error in TCP socket
	bolSocketError: BOOL;
	/// error in sensor (SICK)
	bolSensorError: BOOL;
	/// error ID
	udiErrorID: UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>