<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_BCD_Par" Id="{32424278-1fb7-4b8e-99ab-a31ce99383f1}">
    <Declaration><![CDATA[TYPE T_BCD_Par :
STRUCT
	tTOConnection: TIME;
	tTOSend: TIME;
	tTOReceive: TIME;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>