<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_BCD_Status" Id="{51ed93e0-f667-473c-8649-2682192e2bcf}">
    <Declaration><![CDATA[TYPE T_BCD_Status :
STRUCT
	/// Socket connected
	bolSocketConnected: BOOL;
	bolComChecked: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>